--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-quadprog=0.1.6
-numpy==1.15.4
-scikit-learn==0.20.2
-scipy==0.17.1
-pandas
+quadprog=0.1.7
+numpy==1.17.1
+scikit-learn==0.22.2.post1
+scipy==1.3.0
+pandas==0.23.4
+dill==0.3.1.1
+h5py==2.10.0
+anndata==0.7.1
+scanpy==1.5.1
+optparse==1.5.3
+json==2.0.9
